RESOLVED FIXED277109
REGRESSION (281042@main): [ macOS ] 2x tiled-drawing/scrolling/overflow/overflow-scrolled-* is flaky failing.
https://bugs.webkit.org/show_bug.cgi?id=277109
Summary REGRESSION (281042@main): [ macOS ] 2x tiled-drawing/scrolling/overflow/overf...
Anfernee Viduya
Reported 2024-07-25 16:47:42 PDT
tiled-drawing/scrolling/overflow/overflow-scrolled-down-tile-coverage.html tiled-drawing/scrolling/overflow/overflow-scrolled-up-tile-coverage.html are flaky failing. HISTORY: https://results.webkit.org/?platform=mac&style=debug&style=release&suite=layout-tests&suite=layout-tests&test=tiled-drawing%2Fscrolling%2Foverflow%2Foverflow-scrolled-down-tile-coverage.html&test=tiled-drawing%2Fscrolling%2Foverflow%2Foverflow-scrolled-up-tile-coverage.html&version_name=Sonoma&version_name=Ventura DIFF: tiled-drawing/scrolling/overflow/overflow-scrolled-down-tile-coverage.html @@ -44,12 +44,12 @@ (bounds 385.00 3000.00) (drawsContent 1) (visible rect 0.00, 1800.00 385.00 x 512.00) - (coverage rect 0.00, 1544.00 897.00 x 1024.00) + (coverage rect 0.00, 1287.99 385.00 x 1024.01) (intersects coverage rect 1) (contentsScale 1.00) - (tile cache coverage 0, 1536 385 x 1464) + (tile cache coverage 0, 1024 385 x 1536) (tile size 512 x 512) - (top left tile 0, 3 tiles grid 1 x 3) + (top left tile 0, 2 tiles grid 1 x 3) (in window 1) ) ) tiled-drawing/scrolling/overflow/overflow-scrolled-up-tile-coverage.html @@ -44,12 +44,12 @@ (bounds 385.00 3000.00) (drawsContent 1) (visible rect 0.00, 200.00 385.00 x 512.00) - (coverage rect 0.00, 0.00 897.00 x 1024.00) + (coverage rect 0.00, 200.00 385.00 x 1024.01) (intersects coverage rect 1) (contentsScale 1.00) - (tile cache coverage 0, 0 385 x 1024) + (tile cache coverage 0, 0 385 x 1536) (tile size 512 x 512) - (top left tile 0, 0 tiles grid 1 x 2) + (top left tile 0, 0 tiles grid 1 x 3) (in window 1) ) ) LINK: https://build.webkit.org/results/Apple-Sonoma-Debug-WK2-Tests/281341@main%20(2070)/tiled-drawing/scrolling/overflow/overflow-scrolled-down-tile-coverage-diff.txt https://build.webkit.org/results/Apple-Sonoma-Debug-WK2-Tests/281341@main%20(2070)/tiled-drawing/scrolling/overflow/overflow-scrolled-up-tile-coverage-diff.txt DESCRIPTION: In 281042@main changes were made that were around WebCore::GraphicsLayer::setTileCoverage
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-25 16:49:03 PDT
Anfernee Viduya
Comment 2 2024-07-25 16:51:05 PDT
REPRODUCIBILITY: I was able to reproduce this issue on ToT using command. run-webkit-tests 281196@main tiled-drawing/scrolling/overflow/overflow-scrolled-up-tile-coverage.html --iterations=10 --debug run-webkit-tests 281196@main tiled-drawing/scrolling/overflow/overflow-scrolled-down-tile-coverage.html --iterations=10 --debug
Anfernee Viduya
Comment 3 2024-07-25 17:06:23 PDT
EWS
Comment 4 2024-07-26 11:03:47 PDT
Test gardening commit 281407@main (6ead4f05a6e9): <https://commits.webkit.org/281407@main> Reviewed commits have been landed. Closing PR #31252 and removing active labels.
Anfernee Viduya
Comment 5 2024-08-12 16:01:20 PDT
EWS
Comment 6 2024-08-12 16:03:59 PDT
Test gardening commit 282142@main (1e16f12559d4): <https://commits.webkit.org/282142@main> Reviewed commits have been landed. Closing PR #32072 and removing active labels.
Matt Woodrow
Comment 7 2025-05-07 21:06:53 PDT
It looks like there’s at least two issues here. One is that the requestAnimationFrame intervals can happen faster than 16ms, and `HistoricalVelocityData::velocityForNewData` ignores updates faster than, so we can sometimes end up with 0 velocity (for both tests). The second is that the caller of `TileController::adjustTileCoverageWithScrollingVelocity` recomputes `m_velocity.lastUpdateTime` using `MonotonicTime::now`, and then this function computes the delta with another call. This results in a tiny, but not quite zero time delta. The future rect gets moved by this amount, which I don't think is correct. The 'down' test fails frequently, because this movement value varies a fair bit (racily, depending on the time delta) and affects the position of the final rect.
Matt Woodrow
Comment 8 2025-05-08 18:55:00 PDT
EWS
Comment 9 2025-05-13 18:51:16 PDT
Committed 294876@main (ec36eefa5d9f): <https://commits.webkit.org/294876@main> Reviewed commits have been landed. Closing PR #45143 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.